Fix Bug when side-nav menu not showing properly on medium and small

--- a/glados/static/scss/chembl-style.scss
+++ b/glados/static/scss/chembl-style.scss
@@ -180,6 +180,8 @@ $sidenav-links-lineheight: 38px;
     left: 5px;
     bottom: 2px;
   }
+
+  transform: unset;
 }
 
 
